<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="200dp" >

            <ScrollView
                android:id="@+id/scrollView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

        <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:text="@string/whatsnew" 
            android:color="#ffffff"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/swipe_down" />
        <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:text="@string/swipe_bottom" 
            android:color="#ffffff"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/swipe_up" />
        <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:text="@string/swipe_top" 
            android:color="#ffffff"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/swipe_left" />
        <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:text="@string/swipe_left" 
            android:color="#ffffff"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/swipe_right" />
        <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:text="@string/swipe_right" 
            android:color="#ffffff"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/press_hold" />
        <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:text="@string/tap_hold" 
            android:color="#ffffff"/>

            </LinearLayout>
        </ScrollView>
        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="0.63" >

      <Button
          
         android:id="@+id/buttonOkWhatsnew"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/ok"/>
     </LinearLayout>
     
    
</LinearLayout>