<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="200dp" >

            <ScrollView
                android:id="@+id/scrollView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

        <TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
            android:text="@string/app_version_copy" 
            android:color="#ffffff"
            android:layout_margin="5dp"
            android:autoLink="all"
    		android:linksClickable="true" />
        <TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
            android:text="@string/about_text" 
            android:color="#ffffff"
            android:layout_margin="5dp"
            android:autoLink="all"
    		android:linksClickable="true" />
            </LinearLayout>
        </ScrollView>
        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0.63" >

      <Button
          
         android:id="@+id/buttonOkAbout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/ok"/>
     </LinearLayout>
     
    
</LinearLayout>